Start using MKAbilityInfo instead of MKAbility